--- a/cvManager/View/CondidateCRViewerView.xaml
+++ b/cvManager/View/CondidateCRViewerView.xaml
@@ -3,11 +3,116 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:cvManager.View" xmlns:Viewer="clr-namespace:SAPBusinessObjects.WPF.Viewer;assembly=SAPBusinessObjects.WPF.Viewer"
+        xmlns:local="clr-namespace:cvManager.View" xmlns:Viewer="clr-namespace:SAPBusinessObjects.WPF.Viewer;assembly=SAPBusinessObjects.WPF.Viewer" xmlns:fa="http://schemas.awesome.incremented/wpf/xaml/fontawesome.sharp"
         mc:Ignorable="d"
-        Title="CondidateCRViewerView" Height="450" Width="800">
-    <Grid>
-        <Viewer:CrystalReportsViewer x:Name="CondidateViewer" HorizontalAlignment="Left" Height="800" VerticalAlignment="Top" Width="1100" />
-        
-    </Grid>
-</Window>
+        Title="CondidateCRViewerView" Height="450" Width="800"
+        Loaded="CondidateViewer_Loaded"
+        WindowStartupLocation="CenterScreen"
+        WindowStyle="None"
+        Background="Transparent"
+        AllowsTransparency="True">
+    <Border CornerRadius="10"
+            BorderThickness="2"
+           
+            >
+        <Border.BorderBrush>
+            <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+                <GradientStop Color="{StaticResource winBorderColor1}" Offset="1"/>
+                <GradientStop Color="{StaticResource winBorderColor2}" Offset="0.75"/>
+                <GradientStop Color="{StaticResource winBorderColor3}" Offset="0"/>
+            </LinearGradientBrush>
+
+        </Border.BorderBrush>
+
+        <Grid>
+            <Grid.ColumnDefinitions>
+                
+                <!--content section-->
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+
+            
+
+            <!--content section-->
+            <Border CornerRadius="0,10,10,0"
+                    Grid.Column="1">
+                <Border.Background>
+                    <LinearGradientBrush StartPoint="1,0" EndPoint="0.5,1.3">
+                        <GradientStop Color="#014B00" Offset="0.2"/>
+                        <GradientStop Color="#11003D" Offset="0.55"/>
+                        <GradientStop Color="#014B00" Offset="1.1"/>
+                    </LinearGradientBrush>
+                </Border.Background>
+                <Grid>
+                    <Grid.RowDefinitions>
+
+                        <!--Control bar-->
+                        <RowDefinition Height="25" />
+
+                        
+
+                        <!--Content section / Child views-->
+                        <RowDefinition Height="*" />
+
+                    </Grid.RowDefinitions>
+
+                    <!--Control bar-->
+                    <StackPanel x:Name="pnlControlBar"
+                                Grid.Row="0"
+                                Orientation="Horizontal"
+                                FlowDirection="RightToLeft"
+                                Background="Transparent"
+                                Margin="0,0,5,0"
+                                MouseLeftButtonDown="pnlControlBar_MouseLeftButtonDown"
+                                MouseEnter="pnlControlBar_MouseEnter">
+
+
+                        <Button x:Name="btnClose"
+                                Style="{StaticResource ControlButton}"
+                                Tag="{StaticResource color4}"
+                                Click="btnClose_Click">
+                            <fa:IconImage Icon="Xmark" Style="{StaticResource controlButtonIcon}"/>
+
+
+                        </Button>
+
+
+
+
+                        <Button x:Name="btnMaximize"
+                                Style="{StaticResource ControlButton}"
+                                Tag="{StaticResource color6}"
+                                Click="btnMaximize_Click">
+                            <fa:IconImage Icon="Square" Style="{StaticResource controlButtonIcon}"/>
+                        </Button>
+
+                        <Button x:Name="btnMinimize"
+                                Style="{StaticResource ControlButton}"
+                                Tag="{StaticResource color8}"
+                                Click="btnMinimize_Click">
+                            <fa:IconImage Icon="WindowMaximize" Width="12" Style="{StaticResource controlButtonIcon}"/>
+                        </Button>
+
+                    </StackPanel>
+
+
+                   
+                    
+
+
+                    
+                    <Viewer:CrystalReportsViewer Grid.Row="1" x:Name="CondidateViewer" HorizontalAlignment="Left" Height="800" VerticalAlignment="Top" Width="1100"  />
+
+
+
+
+                </Grid>
+
+
+            </Border>
+
+        </Grid>
+
+
+    </Border>
+    </Window>
